[package]
name = "aoc-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0.1"
reqwest = "0.11.13"
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
toml = "0.5.9"
webbrowser = "0.8.2"
